--- a/assets/sass/_custom-colors.scss
+++ b/assets/sass/_custom-colors.scss
@@ -1,9 +1,10 @@
-// $body-color: ;
-// $primary: ;
-// $secondary: ;
+$dark: #000000;
+$black: #333333;
+$body-color: $black;
+$primary: #e84700;
+$secondary: #fef4e5;
 // $success: ;
 // $info: ;
 // $warning: ;
 // $danger: ;
 // $light: ;
-// $dark: ;
