--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Open+Sans:wght@400;700&display=swap');
+
 // bootstrap関連
 @import "custom-colors"; // テーマカラー
 @import "custom-font-size"; // テーマフォントサイズ
 @import "~bootstrap/scss/bootstrap";
 
 @import "~@fortawesome/fontawesome-free/css/all.css";
+
+@import "./common";
+@import "./components";
