--- a/assets/sass/_custom-colors.scss
+++ b/assets/sass/_custom-colors.scss
@@ -5,6 +5,6 @@ $primary: #e84700;
 $secondary: #fef4e5;
 // $success: ;
 // $info: ;
-// $warning: ;
+$warning: #f18f01;
 // $danger: ;
-// $light: ;
+$light: #f2f2f2;
