--- a/assets/sass/_custom-colors.scss
+++ b/assets/sass/_custom-colors.scss
@@ -4,7 +4,7 @@ $body-color: $black;
 $primary: #e84700;
 $secondary: #fef4e5;
 // $success: ;
-// $info: ;
+$info: #ffeeb7;
 $warning: #f18f01;
 // $danger: ;
 $light: #f2f2f2;
