--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -24,9 +24,16 @@ p {
     flex-wrap: wrap;
     .main {
       width: 70%;
+      @include media-breakpoint-down(md) {
+        width: 100%;
+        margin-bottom: 3rem;
+      }
     }
     .side {
       width: 28%;
+      @include media-breakpoint-down(md) {
+        width: 100%;
+      }
     }
   }
 }
