--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -6,6 +6,11 @@
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
+    @include media-breakpoint-down(md) {
+      align-items: center;
+      justify-content: flex-start;
+      text-align: left;
+    }
     &-img {
       margin-right: 0.5rem;
     }
@@ -14,6 +19,9 @@
       font-weight: bold;
       margin: 0;
       line-height: 1;
+      @include media-breakpoint-down(md) {
+        font-size: 1rem;
+      }
       a {
         color: $black;
         span {
@@ -24,6 +32,10 @@
           box-sizing: border-box;
           margin-left: 0.5rem;
           padding: 0.5rem 1rem;
+          @include media-breakpoint-down(md) {
+            font-size: $font-size-sm;
+            padding: 0.25rem 0.5rem;
+          }
         }
       }
     }
