--- a/assets/sass/components/_merchant.scss
+++ b/assets/sass/components/_merchant.scss
@@ -107,6 +107,30 @@
         }
       }
     }
+    &__info-flex {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      .thumbnail {
+        width: 35%;
+        @include media-breakpoint-down(md) {
+          width: 100%;
+          margin-bottom: 1rem;
+        }
+        img {
+          @include media-breakpoint-down(md) {
+            width: 100%;
+          }
+        }
+      }
+      .merchant__inner__info-support {
+        width: 62%;
+        @include media-breakpoint-down(md) {
+          width: 100%;
+        }
+      }
+    }
     &.first {
       .merchant__inner-ttl {
         background-color: $info;
@@ -158,30 +182,6 @@
         padding: 1rem;
         border: solid 5px $info;
         border-top: 0;
-      }
-      .merchant__inner__info-flex {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        flex-wrap: wrap;
-        .thumbnail {
-          width: 35%;
-          @include media-breakpoint-down(md) {
-            width: 100%;
-            margin-bottom: 1rem;
-          }
-          img {
-            @include media-breakpoint-down(md) {
-              width: 100%;
-            }
-          }
-        }
-        .merchant__inner__info-support {
-          width: 62%;
-          @include media-breakpoint-down(md) {
-            width: 100%;
-          }
-        }
       }
     }
     &__point {
@@ -243,6 +243,8 @@
           left: 2rem;
           @include media-breakpoint-down(md) {
             top: -2.5rem;
+            left: 50%;
+            transform: translateX(-50%);
           }
         }
       }
