--- a/assets/sass/components/_single.scss
+++ b/assets/sass/components/_single.scss
@@ -17,3 +17,221 @@
     }
   }
 }
+
+.single {
+  &__merchant {
+    &__info {
+      box-sizing: border-box;
+      padding: 1.5rem;
+      background-color: #fef4e5;
+      &-wrap {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-wrap: wrap;
+      }
+      &-thumbnail {
+        width: 35%;
+        @include media-breakpoint-down(md) {
+          width: 100%;
+          margin-bottom: 1rem;
+        }
+      }
+      &-txt {
+        width: 60%;
+        @include media-breakpoint-down(md) {
+          width: 100%;
+        }
+        h3 {
+          box-sizing: border-box;
+          padding-left: 1rem;
+          border-left: solid 5px $body-color;
+          font-weight: bold;
+          font-size: 1.25rem;
+          margin-bottom: 1rem;
+        }
+        table {
+          border-collapse: collapse;
+          th,
+          td {
+            box-sizing: border-box;
+            padding: 0.25rem;
+            font-size: $font-size-sm;
+            font-weight: normal;
+            vertical-align: top;
+            @include media-breakpoint-down(md) {
+              display: block;
+              padding: 0.25rem 0;
+            }
+          }
+          th {
+            color: #6a6a6a;
+            white-space: nowrap;
+            @include media-breakpoint-down(md) {
+              padding-bottom: 0;
+            }
+          }
+        }
+      }
+    }
+    &__menu {
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      flex-wrap: wrap;
+      margin: 3rem 0 2rem;
+      a {
+        display: block;
+        width: 20%;
+        text-align: center;
+        padding: 0.75rem 1rem;
+        line-height: 1;
+        border: solid 2px $primary;
+        border-right: 0;
+        &:last-child {
+          border-right: solid 2px $primary;
+        }
+        &.active,
+        &:hover {
+          background-color: $primary;
+          color: $white;
+          text-decoration: none;
+        }
+      }
+      &__inner {
+        margin-bottom: 3rem;
+        &:last-of-type {
+          margin-bottom: 0;
+        }
+        h3 {
+          background-color: $warning;
+          color: $white;
+          box-sizing: border-box;
+          display: inline-block;
+          vertical-align: bottom;
+          padding: 0.5rem 1rem;
+          font-size: 1rem;
+          border-top-left-radius: 0.5rem;
+          border-top-right-radius: 0.5rem;
+          margin: 0;
+        }
+        &__wrap {
+          box-sizing: border-box;
+          padding: 1.5rem;
+          border: solid 2px $light;
+          @include media-breakpoint-down(md) {
+            padding: 1.5rem 1rem;
+          }
+          .merchant__inner__point {
+            box-sizing: border-box;
+            padding: 1rem;
+            background-color: #fef4e5;
+          }
+          &-case {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            &-img {
+              width: 31%;
+              @include media-breakpoint-down(md) {
+                width: 100%;
+                margin-bottom: 2rem;
+              }
+              &:last-child {
+                @include media-breakpoint-down(md) {
+                  margin-bottom: 0;
+                }
+              }
+              .carousel {
+                &-item {
+                  position: relative;
+                  &:first-of-type {
+                    &::before {
+                      content: "Before";
+                      position: absolute;
+                      top: 5px;
+                      left: 5px;
+                      display: inline-block;
+                      vertical-align: middle;
+                      box-sizing: border-box;
+                      padding: 3px 5px;
+                      background-color: $white;
+                      color: $primary;
+                      font-size: 12px;
+                      font-weight: bold;
+                    }
+                  }
+                  &:last-of-type {
+                    &::before {
+                      content: "After";
+                      position: absolute;
+                      top: 5px;
+                      left: 5px;
+                      display: inline-block;
+                      vertical-align: middle;
+                      box-sizing: border-box;
+                      padding: 3px 5px;
+                      background-color: $white;
+                      color: $primary;
+                      font-size: 12px;
+                      font-weight: bold;
+                    }
+                  }
+                }
+              }
+            }
+          }
+          &.table-wrap {
+            table {
+              border-collapse: collapse;
+              th,
+              td {
+                font-size: $font-size-sm;
+                box-sizing: border-box;
+                padding: 0.5rem;
+                border-bottom: solid 1px $light;
+              }
+              th {
+                white-space: nowrap;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.review {
+  &__inner {
+    position: relative;
+    background-color: $light;
+    box-sizing: border-box;
+    padding: 1.5rem;
+    margin-bottom: 1rem;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    &::before {
+      display: inline-block;
+      vertical-align: top;
+      content: "”";
+      position: absolute;
+      top: -0.2em;
+      left: 1rem;
+      font-size: 3rem;
+      color: $primary;
+      line-height: 1;
+    }
+    h4 {
+      font-weight: bold;
+      font-size: $font-size-sm;
+      margin-bottom: 1em;
+    }
+    p {
+      font-size: $font-size-sm;
+      margin: 0;
+    }
+  }
+}
